refactor(Game): 게임완료후, 우승 자동차 이름목록을 반환 할 수 있으며, 매 회 플레이가 끝나면, 자동차들의 이름과 전진상태 목록을 반환 할 수 있다